TestRun 新增 Release & 部分調整
